# telemetry-risk-client

./: Cargo.toml
src/: lib.rs
src/client/: http_sync_client.rs  metadata_client.rs  mod.rs
src/config/: mod.rs
src/model/: constant.rs  error_report.rs  mod.rs  unstructured.rs
src/service/: mod.rs  risk_client.rs  risk_layer.rs
