[package]
name = "telemetry-risk-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# === Core Runtime ===
tracing = "0"
tracing-subscriber = "0"
anyhow = "1"

# == Utilities ==
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# === Queue ===
kanal = "0"

# == Http ==
reqwest = { version = "0", features = ["json", "blocking"]}

# === Custom Libraries ===
cloud-util = {git = "https://github.com/ElBellaCiao/cloud-util.git", features = ["config-store"], rev = "702b01227ab06cbadda3724e2259e56755634095" }
